--- a/testCase.html
+++ b/testCase.html
@@ -2,49 +2,43 @@
 <html>
 <head>
     <title>Repo browser</title>
-    <meta http-equiv="Access-Control-Allow-Origin" content="*"> 
 </head>
 <body>
 	<p onclick="toto()">Hello</p>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="lib/jquery-jsonp-2.2.1.min.js"></script>
 	<script src="lib/github.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 
 	<script type="text/javascript">
 		function toto(){
 			console.log("toto");
+
+            this.toto = "bouya";
+
+            $.ajax({
+              url: "https://github.com/api/v2/json/commits/list/sourcemint/platform-mozilla-addon-sdk/master?page=1",
+              dataType:  'jsonp',
+              context: this,
+              success: function( data ) {
+                  console.log("aaa" + this.toto);
+              },
+              error: function(data,msg) {
+                  console.log("Could not find " + data["branch"] + " - " + msg);
+              }
+            });
+
            
-			$.ajax({
-				url: "https://github.com/api/v2/json/commits/list/sourcemint/platform-mozilla-addon-sdk/master?page=1",
-				dataType: "jsonp",
-				success: function( response ){
-				    console.log( "Ajax1" );
-				    console.log( response );
-  				},
-  				error: function(){ console.log("Error1" ) },
- 				statusCode: {
- 				    404: function(){
- 				        console.log( "Ajax 1 404" );
- 				    }
- 				}
-			});
+            $.jsonp({
+              url: "https://github.com/api/v2/json/commits/list/sourcemint/platform-mozilla-addon-sdk/master?page=2&callback=?",
+              context: this,
+              success: function() {
+                  console.log("aaa");
+              },
+              error: function(d, msg) {
+                  console.log("Could not find " + this.toto + " - " + msg);
+              }
+            });
 
-			
-			$.ajax({
-				url: "https://github.com/api/v2/json/commits/list/sourcemint/platform-mozilla-addon-sdk/master?page=2",
-				dataType: "jsonp",
-				success: function( response ){
-				    console.log( "Ajax2" );
-				    console.log( response );
-  				},
-  				error: function(){ console.log("Error 2" ) },
- 				statusCode: {
- 				    404: function(){
- 				        console.log( "Ajax 2 404" );
- 				    }
- 				}
-			});
-
-			//gh.commit.forBranch( "sourcemint", "platform-mozilla-addon-sdk", "master?page=2", function(response){console.log(response)}, {} );
 		}
 	</script>
 </body>
